# 8V42_Kiegechev_Programming_3sem_lab5

./: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.h  Dust.cpp  Dust.h  Physics.cpp  Physics.h  Point.h  World.cpp  World.h  main.cpp
.github/workflows/: release.yml
